WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105089
Fix unused parameter compile warnings
https://bugs.webkit.org/show_bug.cgi?id=105089
Summary
Fix unused parameter compile warnings
Seokju Kwon
Reported
2012-12-15 06:10:13 PST
Use UNUSED_PARAM macro to fix build warning -Wunused-parameter.
Attachments
Patch
(5.72 KB, patch)
2012-12-15 06:18 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2012-12-15 06:18:02 PST
Created
attachment 179594
[details]
Patch
Kentaro Hara
Comment 2
2012-12-16 05:05:34 PST
Comment on
attachment 179594
[details]
Patch ok
WebKit Review Bot
Comment 3
2012-12-16 22:58:57 PST
Comment on
attachment 179594
[details]
Patch Clearing flags on attachment: 179594 Committed
r137873
: <
http://trac.webkit.org/changeset/137873
>
WebKit Review Bot
Comment 4
2012-12-16 22:59:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug