Fix unused parameter compile warnings https://bugs.webkit.org/show_bug.cgi?id=105089

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2012-12-16
Reviewed by Kentaro Hara.

Use UNUSED_PARAM macro to fix build warning -Wunused-parameter.

Source/WebCore:

No new tests, no behavior change.

* bindings/js/JSDOMWindowBase.cpp:
(WebCore::JSDOMWindowBase::supportsProfiling):
(WebCore::JSDOMWindowBase::supportsRichSourceInfo):

Source/WebKit/efl:

* ewk/ewk_view.cpp:
(ewk_view_inspector_show):
(ewk_view_inspector_close):
(ewk_view_inspector_view_get):
(ewk_view_inspector_view_set):

Source/WebKit2:

* UIProcess/API/efl/ewk_view.cpp:
(ewk_view_inspector_show):
(ewk_view_inspector_close):

Canonical link: https://commits.webkit.org/123386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137873 268f45cc-cd09-0410-ab3c-d52691b4dbfc